option('tls_backend', type: 'combo', choices: ['openssl', 'gnutls'], value: 'openssl', description: 'TLS backend to use')
option('system_wgetrc', type: 'string', value: '/etc/wgetrc', description: 'Location of the system-wide wgetrc')
option('locale_dir', type: 'string', value: '/usr/share/locale', description: 'Locale directory path')
option('enable_metalink', type: 'boolean', value: false, description: 'Enable Metalink support')
option('enable_debug_logging', type: 'boolean', value: false, description: 'Build with debug logging enabled')
option('enable_opie', type: 'boolean', value: false, description: 'Enable OPIE support')
option('enable_xattr', type: 'boolean', value: true, description: 'Enable extended attribute support')
